@@ -9,6 +9,7 @@ Version 1.4.8 - CVS
   - Using is_file() instead of file_exists() in fortune plugin (#1499134).
   - Add manual page for conf.pl under contrib.
   - Don't allow selecting INBOX as Sent, Draft or Trash folder (#1242346).
+  - Removed PHP register_globals=on test from configtest.php utility.
   
 Version 1.4.7 - 4th July 2006
 -----------------------------
